# LRtrader

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Architecture.md  DYNAMIC_SIGNAL_IMPLEMENTATION_PLAN.md  POSITION_TRACKING_FIX.md  README.md  STRATEGY.md  crossover-config.yaml  global-news-signal-config.yaml  kill_lrtrader.sh  kill_newstrader.sh  kill_tradehead.sh  production-config.yaml  promtps.txt  pyproject.toml  pytest.ini  start_lrtrader.sh  start_newstrader.sh  start_tradehead.sh  status.csv  test-config-with-news.yaml  test-config.yaml  test_clickhouse_data.py  test_emergency_fix.py  test_emergency_retry.py  test_news_alerts.py  tier_list.txt
.claude/commands/: gitpush.md
predictions/: composite_signal_provider.py  news_alert_signals.py  prediction_signals.py
src/: THREADS.md  app.py  error.py  manager.py  portfolio_app.py  run_local.py  run_prod.py
src/clients/: __init__.py  ibkr_client.py  ibkr_wrapper.py  inference.py
src/logic/: __init__.py  order.py  order_queue.py  predicate.py
src/schema/: __init__.py  _base.py  assignment.py  enums.py  market.py  order.py  portfolio.py  position.py  prediction.py  trade.py
test/: test_emergency_exit_timing.py  test_mock_crossover_signals.py  test_position_sizing_fix.py  test_position_tracking.py  test_queue_clearing.py  test_queue_clearing_standalone.py  test_staggered_orders.py  test_timezone_fix.py  test_timing_improvements.py
